--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-ant-design-less",
+  "name": "ly-thuyet-mat-ma",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -7,8 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.5.0",
     "@zeit/next-less": "^1.0.1",
-    "antd": "^3.5.4",
+    "antd": "^4.12.3",
     "babel-plugin-import": "^1.7.0",
     "less": "3.0.4",
     "less-vars-to-js": "1.3.0",
@@ -17,5 +18,12 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "typescript": "^4.2.2",
+    "webpack": "^4.4.1"
+  }
 }
